# CUDA_Practice

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CMakeWorkspaceSettings.json  Makefile  README.md  justfile  pyproject.toml  windows_build.ps1
notebooks/: gpu_sanity_check.ipynb
src/: CMakeLists.txt  hello_gpu.cu  parallel_reduction.cu  sum_k_adjacent_elements.cu  vector_add.cu  vector_add_basic.cu  vector_matrix_multiply.cu  vector_square_matrix_multiply.cu  vector_square_matrix_multiply_finertile.cu
src/add_two_vectors/: README.md  add_two_vectors.cu
src/convert_to_rgb/: convert_to_rgb.cu
src/convert_to_rgb/input/: get_pixels.ipynb
src/convert_to_rgb/output/: print_pixels.ipynb
src/hello_world/: README.md  hello_world.cu
src/matrix_multiply_simple/: matrix_multiply.cu
src/matrix_multiply_tiled/: matrix_multiply_tiled.cu  matrix_multiply_tiled_output.txt
src/matrix_operation/: matrix_operation.cu  matrix_operation_utility.c  matrix_operation_utility.h
src/matrix_operation/data/: A.raw  B.raw  C.raw  generate_data.py  result.raw
src/parallel_reduction/: README.md  parallel_reduction.cu
src/plus_sign_sum/: plus_sign_sum.cu
src/simple_convolution/: convolution_1D_basic_kernel.cu  convolution_1D_tiled_kernel.cu  convolution_2D_basic_kernel.cu  convolution_2D_tiled_kernel.cu  convolution_3D_basic_kernel.cu  convolution_3D_tiled_kernel.cu  convolution_verify.cpp  convolution_verify.h  launch_conv_kernels.cpp  simple_convolution.cu
